--- a/app/views/chats/room.html.erb
+++ b/app/views/chats/room.html.erb
@@ -1,12 +1,15 @@
+<%= subscribe_to "/messages/public" %>
+<%= subscribe_to "/messages/private/#{session[:username]}" %>
+
 <div class="chat_container">
   <div id="chat_room">
     <p class="alert"> Welcome to the chat room <%= session[:username] %>! </p>
   </div>
  
-  <form id="new_message_form">
-    <input type="text" id="message" name="message">
-    <input type="submit" value="Send">
-  </form>
+<%= form_tag new_message_path, :remote => true do %>
+  <%= text_field_tag :message %>
+  <%= submit_tag "Send" %>
+<% end %>
 </div>
 
 <script>
@@ -15,14 +18,14 @@
     var client = new Faye.Client('http://localhost:9292/faye');
  
     // Our public subscription
-    var public_subscription = client.subscribe('/messages/public', function(data) {
-      $('<p></p>').html(data.username + ": " + data.msg).appendTo('#chat_room');
-    });
+	PrivatePub.subscribe("/messages/public", function(data) {
+	$('<p></p>').html(data.username + ": " + data.msg).appendTo('#chat_room');
+	});
  
     // Our own private channel
-    var private_subscription = client.subscribe('/messages/private/<%= session[:username] %>', function(data) {
-      $('<p></p>').addClass('private').html(data.username + ": " + data.msg).appendTo('#chat_room');
-    });
+	PrivatePub.subscribe("/messages/private/<%= session[:username] %>", function(data) {
+	$('<p></p>').addClass('private').html(data.username + ": " + data.msg).appendTo('#chat_room');
+	});
  
     // Handle form submission to publish messages.
     $('#new_message_form').submit(function(){
